project-assessment-site/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-assessment-site
  labels:
    app: project-assessment-site
    type: index
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-assessment-site
  template:
    metadata:
      labels:
        app: project-assessment-site
    spec:
      containers:
      - name: project-assessment-site
        image: danya97/project-assessment-site
        ports:
        - containerPort: 80
