project-assessment-site/ingress.yaml
apiVersion: extensions/v1
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "site-ingress"
  namespace: delta

spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: project-assessment-site
              servicePort: 80
